# topologymetrics

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.ru.md  GIT-WORKFLOW.md  LICENSE  NOTICE  README.md  README.ru.md  TODO.md  docker-compose.override.yml.example  docker-compose.yml  metrics.md  proposal.md  sdk-architecture.md
.github/workflows/: ci-csharp.yml  ci-go.yml  ci-java.yml  ci-python.yml
.templates/: DEVELOPMENT_PLAN_EXAMPLE.md  DEVELOPMENT_PLAN_TEMPLATE.md  TEMPLATE_GUIDE.md
conformance/: README.md  run.sh
conformance/k8s/: namespace.yml
conformance/runner/: Dockerfile  cross_verify.py  requirements.txt  utils.py  verify.py
conformance/scenarios/: auth-grpc.yml  auth-http-basic.yml  auth-http-bearer.yml  auth-http-header.yml  basic-health.yml  full-failure.yml  group-label.yml  grpc-authority.yml  health-details.yml  http-host-header.yml  initial-state.yml  labels.yml  latency.yml  ldap-basic.yml  ldap-failure.yml  ldap-recovery.yml  partial-failure.yml  recovery.yml  timeout.yml
conformance/test-service/: Dockerfile  go.mod  go.sum  main.go
conformance/test-service-csharp/: Dockerfile  Program.cs  conformance-service.csproj
conformance/test-service-java/: Dockerfile  pom.xml
conformance/test-service-python/: Dockerfile  main.py  requirements.txt
deploy/alerting/: inhibition-rules.yml  rules.yml
deploy/monitoring/: deploy.sh  namespace.yml
docs/: comparison.md  comparison.ru.md  grafana-dashboards.md  grafana-dashboards.ru.md  ingress-gateway.md  ingress-gateway.ru.md  specification.md  specification.ru.md
docs/alerting/: alert-rules.md  alert-rules.ru.md  alertmanager.md  alertmanager.ru.md  custom-rules.md  custom-rules.ru.md  noise-reduction.md  noise-reduction.ru.md  overview.md  overview.ru.md
docs/code-style/: csharp.md  csharp.ru.md  go.md  go.ru.md  java.md  java.ru.md  overview.md  overview.ru.md  python.md  python.ru.md  testing.md  testing.ru.md
docs/migration/: csharp.md  csharp.ru.md  go.md  go.ru.md  java.md  java.ru.md  python.md  python.ru.md  sdk-csharp-v050-to-v060.md  sdk-csharp-v050-to-v060.ru.md  sdk-java-v050-to-v060.md  sdk-java-v050-to-v060.ru.md  sdk-python-v050-to-v060.md  sdk-python-v050-to-v060.ru.md  v042-to-v050.md  v042-to-v050.ru.md  v050-to-v060.md  v050-to-v060.ru.md  v060-to-v070.md  v060-to-v070.ru.md  v060-to-v080.md  v060-to-v080.ru.md  v070-to-v080.md  v070-to-v080.ru.md
docs/quickstart/: csharp.md  csharp.ru.md  go.md  go.ru.md  java.md  java.ru.md  python.md  python.ru.md
plans/: auth-checkers-plan.md  collaborative-refactoring.md  development-plan.md  docs-audit-fix.md  docs-restructure-plan.md  healthdetails-v041-plan.md  host-header-and-grpc-authority.md  issues-fix-plan.md  ldap-checker-v080.md  makefile-conventions.md  sdk-csharp-dynamic-endpoints.md  sdk-go-dynamic-endpoints.md  sdk-java-dynamic-endpoints.md  sdk-python-dynamic-endpoints.md  status-metrics-plan.md  version0-2-1-plan.md  version0-2-plan.md
plans/archive/: docs-restructure-plan.md  go-sdk-docs-plan.md  go-split-checkers-v060-plan.md  host-header-and-grpc-authority.md  ldap-checker-v080.md  sdk-csharp-dynamic-endpoints.md  sdk-go-dynamic-endpoints.md  sdk-python-dynamic-endpoints.md
sdk-csharp/: .editorconfig  .gitignore  DepHealth.sln  Directory.Build.props  Makefile  README.md  README.ru.md
sdk-csharp/DepHealth.AspNetCore/: DepHealth.AspNetCore.csproj  DepHealthHealthCheck.cs  DepHealthHostedService.cs  ServiceCollectionExtensions.cs
sdk-csharp/DepHealth.Core/: AuthValidation.cs  CheckConfig.cs  CheckResult.cs  CheckScheduler.cs  ConfigParser.cs  ConfigurationException.cs  DefaultPorts.cs  DepHealth.Core.csproj  DepHealth.cs  Dependency.cs  DependencyType.cs  Endpoint.cs  EndpointState.cs  EndpointStatus.cs  ErrorClassifier.cs  IHealthChecker.cs  ParsedConnection.cs  PrometheusExporter.cs  StatusCategory.cs  ValidationException.cs
sdk-csharp/DepHealth.EntityFramework/: DepHealth.EntityFramework.csproj  EntityFrameworkExtensions.cs
sdk-csharp/docs/: README.md  README.ru.md  api-reference.md  api-reference.ru.md  aspnetcore.md  aspnetcore.ru.md  authentication.md  checkers.md  (+18 more)
sdk-go/: .golangci.yml  Makefile  README.md  README.ru.md  go.mod  go.sum
sdk-java/: .gitignore  Makefile  README.md  README.ru.md  pom.xml
sdk-python/: .gitignore  Makefile  README.md  README.ru.md  pyproject.toml
sdk-python/dephealth/: __init__.py  api.py  check_result.py  checker.py  dependency.py  endpoint_status.py  metrics.py  parser.py  scheduler.py
sdk-python/dephealth/checks/: __init__.py  amqp.py  grpc.py  http.py  kafka.py  ldap.py  mysql.py  postgres.py  redis.py  tcp.py
sdk-python/dephealth_fastapi/: __init__.py  endpoints.py  lifespan.py  middleware.py
sdk-python/docs/: README.md  README.ru.md  api-reference.md  api-reference.ru.md  authentication.md  authentication.ru.md  checkers.md  checkers.ru.md  code-style.md  code-style.ru.md  configuration.md  configuration.ru.md  connection-pools.md  connection-pools.ru.md  fastapi.md  fastapi.ru.md  getting-started.md  getting-started.ru.md  metrics.md  metrics.ru.md  migration.md  migration.ru.md  troubleshooting.md  troubleshooting.ru.md
sdk-python/docs/examples/async-checks/: main.py
sdk-python/docs/examples/basic-fastapi/: main.py
sdk-python/docs/examples/dynamic-endpoints/: main.py
sdk-python/docs/examples/multi-dependency/: main.py
sdk-python/tests/: test_api.py  test_auth.py  test_dependency.py  test_fastapi.py  test_health_details.py  test_ldap.py  test_metrics.py  test_parser.py  test_scheduler.py
spec/: check-behavior.md  check-behavior.ru.md  config-contract.md  config-contract.ru.md  metric-contract.md  metric-contract.ru.md
(+418 files in other folders)
