[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dephealth", "dephealth_fastapi"]

[project]
name = "dephealth"
version = "0.2.2"
description = "SDK for monitoring microservice dependencies via Prometheus metrics"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Artur Kryukov", email = "artur@kryukov.biz"}]
readme = "README.md"
keywords = ["monitoring", "prometheus", "microservices", "health-check", "dependency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]

[project.urls]
Homepage = "https://github.com/BigKAA/topologymetrics"
Repository = "https://github.com/BigKAA/topologymetrics"
Documentation = "https://github.com/BigKAA/topologymetrics/tree/master/docs"
"Bug Tracker" = "https://github.com/BigKAA/topologymetrics/issues"
Changelog = "https://github.com/BigKAA/topologymetrics/blob/master/CHANGELOG.md"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
mysql = ["aiomysql>=0.2"]
redis = ["redis[hiredis]>=5.0"]
amqp = ["aio-pika>=9.4"]
kafka = ["aiokafka>=0.10"]
grpc = ["grpcio>=1.60", "grpcio-health-checking>=1.60"]
fastapi = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
all = [
    "dephealth[postgres,mysql,redis,amqp,kafka,grpc,fastapi]",
]
dev = [
    "dephealth[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dephealth", "dephealth_fastapi"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
    "aiomysql",
    "aiomysql.*",
    "aiokafka",
    "aiokafka.*",
    "aio_pika",
    "aio_pika.*",
    "grpc",
    "grpc.*",
    "grpc_health",
    "grpc_health.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
